package world.tan_xz.dao;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import org.springframework.stereotype.Repository;
import world.tan_xz.entity.User;


@Repository
public interface UserDao extends BaseMapper<User> {

}
