package world.tan_xz.service;

import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;
import world.tan_xz.dao.UserDao;
import world.tan_xz.entity.User;
import world.tan_xz.utils.Assert;
import world.tan_xz.utils.BeanUtil;
import world.tan_xz.utils.VariableNameUtils;

import java.io.Serializable;
import java.util.List;
import java.util.Map;


@Service
public class UserService extends BaseService<User> {

    @Autowired
    protected UserDao userDao;

    @Override
    public List<User> query(User o) {
        QueryWrapper<User> wrapper = new QueryWrapper();
        if (Assert.notEmpty(o)) {
            Map<String, Object> bean2Map = BeanUtil.bean2Map(o);
            for (String key : bean2Map.keySet()) {
                if (Assert.isEmpty(bean2Map.get(key))) {
                    continue;
                }
                wrapper.eq(VariableNameUtils.humpToLine(key), bean2Map.get(key));
            }
        }
        return userDao.selectList(wrapper);
    }


    public List<User> getAllUsers() {
        return userDao.selectList(null); // 查询所有用户
    }

    @Transactional
    public void updateUserRole(Long userId, Integer roleStatus) {
        Assert.notNull(userId, "用户ID不能为空");
        Assert.notNull(roleStatus, "角色状态不能为空");
        Assert.isTrue(roleStatus == 0 || roleStatus == 2, "角色状态只能为0或2");

        User user = new User();
        user.setId(userId.intValue());
        user.setRoleStatus(roleStatus);
        userDao.updateById(user); // 更新用户角色状态
    }

    @Override
    public List<User> all() {
        return query(null);
    }

    @Override
    public User save(User o) {
        if (Assert.isEmpty(o.getId())) {
            userDao.insert(o);
        } else {
            userDao.updateById(o);
        }
        return userDao.selectById(o.getId());
    }

    @Override
    public User get(Serializable id) {
        return userDao.selectById(id);
    }

    @Override
    public int delete(Serializable id) {
        return userDao.deleteById(id);
    }
}