@startuml
'https://plantuml.com/class-diagram

class User {
  -id: Integer
  -userAccount: String
  -userPwd: String
  -userEmail: String
  -roleStatus: Integer
  +getters/setters()
}

class LoginController {
  -userService: UserService
  -emailClient: EmailClient
  +register(User, String): RespResult
  +login(User): RespResult
  +sendEmailCode(String): RespResult
}

class UserService {
  -userDao: UserDao
  +query(User): List<User>
  +save(User): User
}

class EmailClient {
  -mailSender: JavaMailSenderImpl
  +sendEmailCode(String): String
}

interface UserDao {
  +selectList(QueryWrapper<User>): List<User>
  +insert(User): int
}

User "1" -- "0..*" UserDao : 数据库存储
LoginController --> UserService : 依赖
LoginController --> EmailClient : 依赖
UserService --> UserDao : 实现
UserService ..> User : 操作实体


@enduml@startuml
'https://plantuml.com/use-case-diagram

:Main Admin: as Admin
(Use the application) as (Use)

User -> (Start)
User --> (Use)

Admin ---> (Use)

note right of Admin : This is an example.

note right of (Use)
A note can also
be on several lines
end note

note "This note is connected\nto several objects." as N2
(Start) .. N2
N2 .. (Use)
@enduml